# Task-2.-Checking-the-functions-of-adding-and-receiving-items-from-a-doubly-linked-list

./: CMakeLists.txt  Checking_for_adding_and_receiving_items.cpp  Checking_for_adding_and_receiving_items.sln  Checking_for_adding_and_receiving_items.vcxproj  Checking_for_adding_and_receiving_items.vcxproj.filters
